PIP 307 Update Elasticsearch version to 8